src/components/styles/ShopPage.css
.main-shop {
    margin-top: 5vh; /* Header is 5vh high */
    height: 5vh;

    display: flex;
    height: 95vh;
    width: 100vw;
}

.products .empty {
    font-family: Montserrat, sans-serif;
}

.main-shop .products {
    flex: 3;
    overflow: auto;

    display: grid;
    justify-items: center;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    gap: 1rem;
}

.products .product {
    margin-top: 1rem;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
    transition: box-shadow 200ms, transform 200ms;

    text-decoration: none;
    height: 20rem;
    width: 20rem;
}

.products .product img {
    width: 100%; 
    height: 80%;
    object-fit: scale-down;
}

.products .product .information {
    height: 20%;

    display: flex;
    align-items: center;
    justify-content: space-between;
    line-height: 1; /* keeps text of name and price on the same height, noticeable when hovering a product, which has an animated title */
    margin-right: 10px;

    color: black;

    font-family: Montserrat, sans-serif;
    font-weight: bold;
}

.products .product .scroll-wrapper {
    position: relative;
    width: 80%;
}


.scroll-wrapper .name {
    overflow: hidden;
    white-space: nowrap;
    padding: 0 10px;
}

@keyframes slide {
    /* The trick is that translate's percentages are corresponding to the current element and left referrs to the parent. */
    0%,
    20% {
      transform: translateX(0%);
      left: 0%;
    }
    80%,
    100% {
      transform: translateX(-100%);
      left: 100%;
    }
}

.scroll-wrapper .name span.animate {
    display: inline-block;
    position: relative;
    animation: 3s ease-in-out 0ms infinite alternate none running slide;
}

.scroll-wrapper .name::before {
    z-index: 1;
    top: 0;
    left: 0;
    content: '';
    position: absolute;
    width: 10px;
    height: 100%;
    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
}

.scroll-wrapper .name::after {
    z-index: 1;
    top: 0;
    right: 0;
    content: '';
    position: absolute;
    width: 10px;
    height: 100%;
    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
}

.product .information .price-wrapper {
    display: flex;
    gap: 5px;
}

.products .product:hover {
    transform: scale(1.02);
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.247);
}

.main-shop .shop-sidebar {
    flex: 1;
    min-width: 10rem;
    max-width: 20rem;
    border: solid rgb(212, 212, 212) 1px;
}

